cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs
    other-modules:    Day01, Day02, Day03, Day04, Day05,
                      Day06, Day07, Day08, Day09, Day10,
                      Day11, Day12, Day13, Day14, Day15,
                      Day16, Day17, Day18, Day19, Day20,
                      Day21, Day22, Day23, Day24, Day25

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, matrix, containers, vector,
                      pqueue, array, unordered-containers, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
